src/containers/Dashboard/DashBoard.css
/* ... */
.projects-list__item {
  position: relative;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
  padding: 15px 23px;
  background-color: #fff;
  border: 1px solid #eaeff4;
  border-radius: 7px;
  cursor: pointer;
  transition: background-color 0.12s linear, box-shadow 0.12s linear, border-color 0.12s linear;
}

.btn-icon .sl-icon {
  opacity: 0.8;
  transition: opacity 0.12s linear;
}

.sl-icon-play-system,
.sl-icon-plus {
  background-image: linear-gradient(-180deg, rgba(110, 132, 154, 0.85), #6e849a);
}

.sl-icon {
  display: inline-block;
  margin: -1px;
  padding: 1px;
  color: transparent;
  font-weight: 400;
  font-size: 16px;
  font-family: storyline-icons !important;
  font-style: normal;
  font-variant: normal;
  line-height: 1;
  text-transform: none;
  vertical-align: top;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-feature-settings: 'liga';
  font-feature-settings: 'liga';
}

.sl-icon-more,
.sl-icon-music,
.sl-icon-news,
.sl-icon-notifications {
  background-image: linear-gradient(-180deg, rgba(110, 132, 154, 0.85), #6e849a);
}

.projects-list__item-action {
  margin-right: 16px;
}

.projects-list__item-image {
  position: absolute;
  top: 0;
  left: 0;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 42px;
  min-width: 0;
  height: 42px;
  padding-top: 12px;
  padding-bottom: 11px;
  font-weight: 500;
  font-size: 19px;
  line-height: 1;
  text-align: center;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
  border-radius: 50%;
  box-shadow: inset 0 0 0 1px #fff, 0 0 0 1px #fff, 0 1px 2px 1px rgba(17, 49, 96, 0.16);
}

.projects-list__item-actions {
  display: none;
  margin-right: 16px;
}

.main-list-body.still .projects-list__item:hover {
  background-color: #fff;
  border-color: transparent;
  -webkit-box-shadow: 0 0 1px 1px rgba(17, 49, 96, 0.06), 0 2px 4px 0 rgba(17, 49, 96, 0.12);
  box-shadow: 0 0 1px 1px rgba(17, 49, 96, 0.06), 0 2px 4px 0 rgba(17, 49, 96, 0.12);
}

.main-list-body.still .projects-list__item:hover .projects-list__item-image,
.main-list-body.still .projects-list__item.__is-hovered .projects-list__item-image {
  display: none;
}

.main-list-body.still .projects-list__item:hover .projects-list__item-actions,
.main-list-body.still .projects-list__item.__is-hovered .projects-list__item-actions {
  display: block;
}

.projects-list__item-caption,
.projects-list__item-title {
  margin-bottom: 2px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.projects-list__item-details {
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: -1px;
  margin-bottom: -1px;
}

.projects-list__dragzone {
  height: 76px;
  background-color: #fff;
  background-image: url(/empty-state.svg);
  background-repeat: no-repeat;
  background-size: 10%;
  background-size: cover;
  border: 1px solid #eaeff4;
  border-radius: 7px;
}

.status-indicator {
  position: relative;
  display: inline-block;
  width: 12px;
  height: 12px;
  vertical-align: top;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #fff, 0 1px 2px 2px rgba(17, 49, 96, 0.16);
}

.status-indicator-success {
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(67, 160, 71, 0.85)), to(#43a047));
  background-image: -webkit-linear-gradient(top, rgba(67, 160, 71, 0.85) 0%, #43a047 98%);
  background-image: -o-linear-gradient(top, rgba(67, 160, 71, 0.85) 0%, #43a047 98%);
  background-image: linear-gradient(-180deg, rgba(67, 160, 71, 0.85) 0%, #43a047 98%);
}

.status-indicator-danger {
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(233, 30, 99, 0.85)), to(#e91e63));
  background-image: -webkit-linear-gradient(top, rgba(233, 30, 99, 0.85) 0%, #e91e63 100%);
  background-image: -o-linear-gradient(top, rgba(233, 30, 99, 0.85) 0%, #e91e63 100%);
  background-image: linear-gradient(-180deg, rgba(233, 30, 99, 0.85) 0%, #e91e63 100%);
}

.status-indicator-alert {
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(230, 193, 69, 0.85)), to(#e6c145));
  background-image: -webkit-linear-gradient(top, rgba(230, 193, 69, 0.85) 0%, #e6c145 100%);
  background-image: -o-linear-gradient(top, rgba(230, 193, 69, 0.85) 0%, #e6c145 100%);
  background-image: linear-gradient(-180deg, rgba(230, 193, 69, 0.85) 0%, #e6c145 100%);
}

.status-indicator-info {
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(5, 159, 228, 0.85)), color-stop(98%, #059fe4));
  background-image: -webkit-linear-gradient(top, rgba(5, 159, 228, 0.85) 0%, #059fe4 98%);
  background-image: -o-linear-gradient(top, rgba(5, 159, 228, 0.85) 0%, #059fe4 98%);
  background-image: linear-gradient(-180deg, rgba(5, 159, 228, 0.85) 0%, #059fe4 98%);
}

.projects-list__item-status {
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  align-self: center;
  min-width: 0;
  margin-left: 16px;
  line-height: 1;
  -ms-flex-item-align: center;
}

.projects-list__item-status .status-indicator {
  display: block;
}

.status-indicator::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  padding: 1px;
  background-color: #fff;
  background-clip: content-box;
  border-radius: 50%;
  content: '';
}

.status-indicator-info {
  background-image: linear-gradient(-180deg, rgba(5, 159, 228, 0.85), #059fe4 98%);
}

.projects-list__item-caption {
  color: #8da2b5;
  font-weight: 300;
  font-size: 13px;
  line-height: 1.5384615385;
}

.card-dropdown .dropdown-item {
  cursor: pointer;
}

.hr-label {
  display: inline-block;
  margin-left: 25px;
  color: #94a6bd;
  font-size: 16px;
}

.success-page {
  max-width: 700px;
}

.success-text {
  padding-top: 100px;
}
/* ... */

